--- a/docs/files/jupyter/welcome.ipynb
+++ b/docs/files/jupyter/welcome.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
        "'This will be output without print!'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
        "10"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
        "False"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
        "4"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -264,14 +264,14 @@
        "\n",
        "A simple Markdown list:\n",
        "- first item\n",
-       "- second item, with ome **bold text**\n",
+       "- second item, with some **bold text**\n",
        "- third item, with a [link](https://knowledge.kitchen)\n"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +281,7 @@
     "my_markdown = '''\n",
     "A simple Markdown list:\n",
     "- first item\n",
-    "- second item, with ome **bold text**\n",
+    "- second item, with some **bold text**\n",
     "- third item, with a [link](https://knowledge.kitchen)\n",
     "'''\n",
     "\n",
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -311,13 +311,22 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "Image(url='https://picsum.photos/200')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Code documentation\n",
+    "\n",
+    "To view the documentation of any function, place the cursor between the opening and closing parentheses of the function in your code, and press the shortcut, `Shift`-`Tab`.\n"
    ]
   },
   {
