numpy tutorial link

--- a/docs/files/jupyter/plotting.ipynb
+++ b/docs/files/jupyter/plotting.ipynb
@@ -373,7 +373,7 @@
    "metadata": {},
    "source": [
     "### numpy\n",
-    "`numpy` is a module for performing optimized vector operations on arrays of *n* dimensions."
+    "`numpy` is a module for performing optimized vector operations on arrays of *n* dimensions.  Array operation in `numpy` can be up to 50 times faster than operations on regular Python lists.  See [this tutorial](https://www.studytonight.com/numpy/what-is-python-numpy-library) to learn more."
    ]
   },
   {
