--- a/docs/files/jupyter/intro_to_numpy.ipynb
+++ b/docs/files/jupyter/intro_to_numpy.ipynb
@@ -39,12 +39,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## creating ndarrays"
+    "## creating ndarrays\n",
+    "A variety of ways to create ndarrays in `numpy`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -53,38 +54,62 @@
        "array([23, 56,  2])"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# create an array from a regular Python list\n",
-    "x = np.array([23,56,2])\n",
-    "x"
+    "# create a one-dimensional array from a regular Python list\n",
+    "np.array([23,56,2])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.10259266, 0.2184147 , 0.38380412, 0.73068939],\n",
-       "       [0.95247627, 0.14601821, 0.58743405, 0.88686438],\n",
-       "       [0.26628684, 0.85087546, 0.9312413 , 0.84844995]])"
+       "array([[11, 22, 33],\n",
+       "       [45, 90,  6]])"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# create a two-dimensional array from a regular two-dimensional Python list\n",
+    "np.array([\n",
+    "    [11,22,33], \n",
+    "    [45, 90, 6]]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 193,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.10219055, 0.85492188, 0.12405458, 0.87491665],\n",
+       "       [0.21467651, 0.85459851, 0.87119142, 0.13311813],\n",
+       "       [0.9023749 , 0.44038876, 0.25434983, 0.6081812 ]])"
+      ]
+     },
+     "execution_count": 193,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# create an array of particular dimensions, with random values\n",
-    "np.random.rand(3,4) # 3 rows, 4 columns"
+    "np.random.random_sample( (3, 4) )  # 3 rows, 4 columns"
    ]
   },
   {
@@ -107,7 +132,7 @@
    ],
    "source": [
     "# create an array with zeros as values of a particular shape and dtype\n",
-    "np.zeros((3,4), dtype = int) # 3 rows, 4 columns"
+    "np.zeros( (3, 4), dtype = int ) # 3 rows, 4 columns"
    ]
   },
   {
@@ -130,7 +155,7 @@
    ],
    "source": [
     "# create an array with ones as values of a particular shape and dtype\n",
-    "np.ones((3,4), dtype = int) # 3 rows, 4 columns"
+    "np.ones( (3,4), dtype = int ) # 3 rows, 4 columns"
    ]
   },
   {
@@ -161,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [
     {
@@ -170,19 +195,19 @@
        "array([10, 15, 20, 25, 30, 35])"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 195,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# create an array of from a min to a max value, with a specific step\n",
-    "np.arange(10, 40, 5) # values from 10 up to 40 (exclusive), stepping by 5's"
+    "np.arange( 10, 40, 5 ) # values from 10 up to 40 (exclusive), stepping by 5's"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [
     {
@@ -191,26 +216,27 @@
        "array([10. , 17.5, 25. , 32.5, 40. ])"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 194,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# create an array of from a min to a max value, with a specified number of evenly-spaced values\n",
-    "np.linspace(10, 40, 5) # 5 values from 10 up to 40 (inclusive)"
+    "np.linspace( 10, 40, 5 ) # 5 values from 10 up to 40 (inclusive)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## basic properties of ndarrays"
+    "## introspection\n",
+    "Find out some metadata about an array."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +245,7 @@
        "array([23, 56,  2])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 196,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +293,7 @@
        "2"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,6 +301,27 @@
    "source": [
     "# check the number of dimensions in x\n",
     "y.ndim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2, 3)"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# check the shape of y, which has two rows, three columns\n",
+    "y.shape"
    ]
   },
   {
@@ -324,13 +371,181 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Reshaping arrays"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[11, 22, 33, 45, 90,  6]])"
+      ]
+     },
+     "execution_count": 143,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# two-dimensional array\n",
+    "y = np.array([\n",
+    "    [11,22,33], \n",
+    "    [45, 90, 6]]\n",
+    ")\n",
+    "\n",
+    "# reshape the original array from two rows, three columns into 1 row, 6 columns\n",
+    "y.reshape(1, 6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[2, 5],\n",
+       "       [3, 6],\n",
+       "       [4, 7]])"
+      ]
+     },
+     "execution_count": 149,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# pivot the data, so rows become columns and columns become rows\n",
+    "x = np.array( [ \n",
+    "    [2, 3, 4], \n",
+    "    [5, 6, 7] \n",
+    "] )\n",
+    "x.transpose()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Merging arrays"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2, 3, 4, 5, 6, 7])"
+      ]
+     },
+     "execution_count": 139,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# append new values to an existing array\n",
+    "x = np.array([2, 3, 4])\n",
+    "np.append(x, [5,6,7])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2, 3, 4, 5, 6, 7])"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# join two one-dimensional arrays with the same shape along a specified axis\n",
+    "x = np.array( [2, 3, 4] )\n",
+    "y = np.array( [5, 6, 7] )\n",
+    "np.concatenate( (x, y), axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 2,  3,  4],\n",
+       "       [ 5,  6,  7],\n",
+       "       [ 8,  9, 10],\n",
+       "       [11, 12, 13]])"
+      ]
+     },
+     "execution_count": 134,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# join two two-dimensional arrays with the same shape along a specified axis\n",
+    "# with axis=0, the arrays will be merged 'vertically'\n",
+    "x = np.array( [ \n",
+    "    [2, 3, 4], \n",
+    "    [5, 6, 7] \n",
+    "] )\n",
+    "y = np.array( [ \n",
+    "    [8, 9, 10], \n",
+    "    [11, 12, 13] \n",
+    "]  )\n",
+    "np.concatenate( (x, y), axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 2,  3,  4,  8,  9, 10],\n",
+       "       [ 5,  6,  7, 11, 12, 13]])"
+      ]
+     },
+     "execution_count": 135,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# same as above, but with axis=1, merges 'horizontally'\n",
+    "np.concatenate( (x, y), axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## indexing\n",
     "It is possible to filter the values in an ndarray using booleans to indicate which values to keep."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +554,7 @@
        "array([56])"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 169,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [
     {
@@ -362,14 +577,39 @@
        "array([56])"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 170,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# filter using a boolean expression\n",
-    "x[ x > 50 ]"
+    "filter = x > 50\n",
+    "x[ filter ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['hippopotamus', 'platypus'], dtype='<U12')"
+      ]
+     },
+     "execution_count": 172,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y = np.array( ['hippopotamus', 'giraffe', 'platypus', 'kiwi', 'albatross' ] )\n",
+    "\n",
+    "# select only those animals with a 'p' in their name\n",
+    "filter = np.char.find(y, 'p') >= 0\n",
+    "y[ filter ]"
    ]
   },
   {
@@ -377,7 +617,7 @@
    "metadata": {},
    "source": [
     "## removing nan values\n",
-    "Removing null values is easy by using the complement operator, `~`."
+    "Removing null values (represented in `numpy` as `nan`) is easy by using the complement operator, `~`, in tandem with the `isnan()` function."
    ]
   },
   {
@@ -435,14 +675,158 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Basic statistics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = np.array([\n",
+    "    [ 2, 50, 100],\n",
+    "    [ 3, 60,  200],\n",
+    "    [ 4, 55, 150],\n",
+    "    [ 5, 40, 250]\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  3.5 ,  51.25, 175.  ])"
+      ]
+     },
+     "execution_count": 180,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# calculate means 'vertically'... the median() function works similarly\n",
+    "np.mean(x, axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([50.66666667, 87.66666667, 69.66666667, 98.33333333])"
+      ]
+     },
+     "execution_count": 190,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# calculate means 'horizontally'... the median() function works similarly\n",
+    "np.mean(x, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 188,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  2,  40, 100])"
+      ]
+     },
+     "execution_count": 188,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# determine the minimum value 'vertically'... the amax() function works similarly\n",
+    "np.amin(x, axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 187,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2, 3, 4, 5])"
+      ]
+     },
+     "execution_count": 187,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# determine the minimum value 'horizontally'... the amax() function works similarly\n",
+    "np.amin(x, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 192,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1.11803399,  7.39509973, 55.90169944])"
+      ]
+     },
+     "execution_count": 192,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# standard deviation 'vertically'\n",
+    "np.std(x, axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 191,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 40.01110957,  82.77009659,  60.49977043, 108.19221578])"
+      ]
+     },
+     "execution_count": 191,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# standard deviation 'horizontally'\n",
+    "np.std(x, axis=1)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# an example with a two-dimensional array\n",
-    "x = np.array([np.nan, 1, 12] [3, 41, np.nan]  ] ) "
-   ]
+   "source": []
   }
  ],
  "metadata": {
