--- a/docs/files/jupyter/intro_to_numpy.ipynb
+++ b/docs/files/jupyter/intro_to_numpy.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Intro to numpy\n",
-    "`numpy` is a module for performing optimized vector operations on arrays of *n* dimensions.  Array operation in `numpy` can be up to 50 times faster than operations on regular Python lists.  See [this tutorial](https://www.studytonight.com/numpy/what-is-python-numpy-library) to learn more."
+    "`numpy` is a module for performing optimized vector operations on arrays of *n* dimensions.  Array operation in `numpy` can be up to 50 times faster than operations on regular Python lists."
    ]
   },
   {
@@ -13,7 +13,7 @@
    "metadata": {},
    "source": [
     "## basic concepts\n",
-    "- arrays in `numpy` are referred to as `ndarray`s, for n-dimensional arrays.\n",
+    "- arrays in `numpy` are referred to in documentation as ndarrays, for n-dimensional arrays.\n",
     "- each array stores values of a single data type, called that array's `dtype` - an `int`, `float`, or an object\n",
     "- each value in an `ndarray` is indexed, starting from 0.\n",
     "- a variety of functions exist for creating `ndarray`s."
@@ -376,7 +376,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 199,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# two-dimensional array\n",
+    "y = np.array([\n",
+    "    [11,22,33], \n",
+    "    [45, 90, 6]]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 198,
    "metadata": {},
    "outputs": [
     {
@@ -385,18 +398,12 @@
        "array([[11, 22, 33, 45, 90,  6]])"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 198,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# two-dimensional array\n",
-    "y = np.array([\n",
-    "    [11,22,33], \n",
-    "    [45, 90, 6]]\n",
-    ")\n",
-    "\n",
     "# reshape the original array from two rows, three columns into 1 row, 6 columns\n",
     "y.reshape(1, 6)"
    ]
