--- a/docs/files/jupyter/welcome.ipynb
+++ b/docs/files/jupyter/welcome.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -91,14 +91,16 @@
        "'This will be output without print!'"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# function definition that returns a value\n",
     "def return_something():\n",
+    "    \"\"\"\n",
+    "    useless function definition that returns a value\n",
+    "    \"\"\"\n",
     "    return 'This will be output without print!'\n",
     "\n",
     "# calling it as the last line in the cell will output the return value\n",
