--- a/docs/files/jupyter/intro_to_numpy.ipynb
+++ b/docs/files/jupyter/intro_to_numpy.ipynb
@@ -13,10 +13,9 @@
    "metadata": {},
    "source": [
     "## basic concepts\n",
-    "- arrays in `numpy` are referred to in documentation as ndarrays, for n-dimensional arrays.\n",
-    "- each array stores values of a single data type, called that array's `dtype` - an `int`, `float`, or an object\n",
-    "- each value in an `ndarray` is indexed, starting from 0.\n",
-    "- a variety of functions exist for creating `ndarray`s."
+    "- arrays in `numpy` are referred to in documentation as **ndarrays**, for n-dimensional arrays.\n",
+    "- each array stores values of a single data type, called that array's **dtype** - usually an `int`, `float`, or an object type\n",
+    "- like Python lists, each value in an ndarray is indexed with an integer, starting from 0."
    ]
   },
   {
@@ -61,7 +60,7 @@
    ],
    "source": [
     "# create a one-dimensional array from a regular Python list\n",
-    "np.array([23,56,2])"
+    "np.array( [23, 56, 2] )"
    ]
   },
   {
@@ -186,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +194,7 @@
        "array([10, 15, 20, 25, 30, 35])"
       ]
      },
-     "execution_count": 195,
+     "execution_count": 200,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,6 +223,431 @@
    "source": [
     "# create an array of from a min to a max value, with a specified number of evenly-spaced values\n",
     "np.linspace( 10, 40, 5 ) # 5 values from 10 up to 40 (inclusive)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Indexing and slicing\n",
+    "Indexing is similar to Python lists."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 232,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# a two-dimensional array\n",
+    "a = np.array([ \n",
+    "    [1, 2, 3], \n",
+    "    [4, 5, 6], \n",
+    "    [7, 8, 9],\n",
+    "    [10, 11, 12]\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 233,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([4, 5, 6])"
+      ]
+     },
+     "execution_count": 233,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# get the second element from the outer array\n",
+    "a[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 237,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([7, 8, 9])"
+      ]
+     },
+     "execution_count": 237,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# negative indices work as expected\n",
+    "a[-2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 234,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 234,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# get the third element from the second sub-array\n",
+    "a[1, 2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 247,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 247,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# get the third element from the second-to-last sub-array\n",
+    "a[-2, 2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 246,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[4, 5, 6],\n",
+       "       [7, 8, 9]])"
+      ]
+     },
+     "execution_count": 246,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# simple slice\n",
+    "a[1 : 3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 245,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 7,  8,  9],\n",
+       "       [10, 11, 12]])"
+      ]
+     },
+     "execution_count": 245,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# a slice from the third element thru the end\n",
+    "a[2 : ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 244,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2, 3],\n",
+       "       [4, 5, 6]])"
+      ]
+     },
+     "execution_count": 244,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# a slice from the first element till the third\n",
+    "a[ : 2]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Simple math operations\n",
+    "It's possible to do operations such as addition, subtraction, and more between two ndarrays and between an ndarray and a scalar."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 249,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# take these two one-dimensional ndarrays for example\n",
+    "a = np.array([1, 2, 3, 4])\n",
+    "b = np.array([4, 3, 2, 1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 219,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2, 3, 4, 5])"
+      ]
+     },
+     "execution_count": 219,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# add a scalar to the vector\n",
+    "a + 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 220,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 2, 3])"
+      ]
+     },
+     "execution_count": 220,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# subtract a scalar from the vector\n",
+    "a - 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 210,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([5, 5, 5, 5])"
+      ]
+     },
+     "execution_count": 210,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# add two vectors together\n",
+    "a + b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 212,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-3, -1,  1,  3])"
+      ]
+     },
+     "execution_count": 212,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# subtract one vector from another\n",
+    "a - b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 214,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([4, 6, 6, 4])"
+      ]
+     },
+     "execution_count": 214,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# multiply two vectors together\n",
+    "a * b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 221,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.25      , 0.66666667, 1.5       , 4.        ])"
+      ]
+     },
+     "execution_count": 221,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# divide one vector by another\n",
+    "a / b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 254,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 2,  3,  4],\n",
+       "       [ 6,  7,  8],\n",
+       "       [10, 11, 12],\n",
+       "       [14, 15, 16]])"
+      ]
+     },
+     "execution_count": 254,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# these sorts of operations also work with multi-dimensional arrays\n",
+    "a = np.array([ \n",
+    "    [1, 2, 3], \n",
+    "    [4, 5, 6], \n",
+    "    [7, 8, 9],\n",
+    "    [10, 11, 12]\n",
+    "])\n",
+    "b = np.array([\n",
+    "    [1, 1, 1],\n",
+    "    [2, 2, 2],\n",
+    "    [3, 3, 3],\n",
+    "    [4, 4, 4],\n",
+    "])\n",
+    "a + b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 257,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 10,  20,  30],\n",
+       "       [ 40,  50,  60],\n",
+       "       [ 70,  80,  90],\n",
+       "       [100, 110, 120]])"
+      ]
+     },
+     "execution_count": 257,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a * 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 288,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[False, False,  True],\n",
+       "       [ True,  True,  True],\n",
+       "       [ True,  True,  True],\n",
+       "       [ True,  True,  True]])"
+      ]
+     },
+     "execution_count": 288,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# comparisons\n",
+    "a > 200"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 291,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[False,  True,  True],\n",
+       "       [ True,  True,  True],\n",
+       "       [ True,  True,  True],\n",
+       "       [ True,  True,  True]])"
+      ]
+     },
+     "execution_count": 291,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# more comparisons\n",
+    "a != 100"
    ]
   },
   {
@@ -546,13 +970,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## indexing\n",
+    "## Filtering\n",
     "It is possible to filter the values in an ndarray using booleans to indicate which values to keep."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +985,7 @@
        "array([56])"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 203,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -623,7 +1047,74 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## removing nan values\n",
+    "## Finding unique values\n",
+    "Return just the unique set of values in any array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 281,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Take the following array, which contains some redundant values\n",
+    "a = np.array([\n",
+    "    [ 100,  200,  300],\n",
+    "    [ 300,  400,  500],\n",
+    "    [ 500,  600, 700],\n",
+    "    [700, 800, 900]\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 282,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([100, 200, 300, 400, 500, 600, 700, 800, 900])"
+      ]
+     },
+     "execution_count": 282,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# get an array that contains just the unique values\n",
+    "unique_values = np.unique(a)\n",
+    "unique_values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 283,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0,  1,  2,  4,  5,  7,  8, 10, 11])"
+      ]
+     },
+     "execution_count": 283,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# get the index numbers of the unique values in the original array\n",
+    "unique_values, index_list = np.unique(a, return_index=True)\n",
+    "index_list"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Removing nan values\n",
     "Removing null values (represented in `numpy` as `nan`) is easy by using the complement operator, `~`, in tandem with the `isnan()` function."
    ]
   },
@@ -661,16 +1152,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 292,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 1., 12.,  3., 41.])"
+       "array([  2,  50, 100,   3,  60, 200,   4,  55, 150,   5,  40, 250])"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 292,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -690,7 +1181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 264,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -704,7 +1195,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 269,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "76.58333333333333"
+      ]
+     },
+     "execution_count": 269,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# calculate the mean of all values in the array... the median() function works similarly\n",
+    "x.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 267,
    "metadata": {},
    "outputs": [
     {
@@ -713,7 +1225,7 @@
        "array([  3.5 ,  51.25, 175.  ])"
       ]
      },
-     "execution_count": 180,
+     "execution_count": 267,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -742,6 +1254,27 @@
    "source": [
     "# calculate means 'horizontally'... the median() function works similarly\n",
     "np.mean(x, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 270,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 270,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# determine the minimum value of all values in the array... the max() function works similarly\n",
+    "x.min()"
    ]
   },
   {
@@ -784,6 +1317,27 @@
    "source": [
     "# determine the minimum value 'horizontally'... the amax() function works similarly\n",
     "np.amin(x, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 272,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "79.26691021829699"
+      ]
+     },
+     "execution_count": 272,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# the standard deviation of all values in the array\n",
+    "x.std()"
    ]
   },
   {
